[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = "Main dashboard for interaction with Nemesis"
authors = ["SpecterOps <specterops.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.2"
streamlit = "^1.30.0"
streamlit-authenticator = "^0.2.1"
streamlit-extras = "^0.2.7"
sqlalchemy = "^2.0.9"
psycopg = "^3.1.8"
elasticsearch = "^8.10.0"
streamlit-aggrid = "^0.3.4.post3"
psycopg2 = "^2.9.6"
streamlit-chat = "^0.0.2.2"
streamlit-cookies-manager = "^0.2.0"
streamlit-searchbox = "^0.1.3"
requests = "^2.30.0"
streamlit-elements = "^0.1.0"
humanize = "^4.8.0"
pillow = "^10.0.1"
urllib3 = "1.26.18"
binaryornot = "^0.4.4"
simple-hexdump = "^0.0.1"
filetype = "^1.2.0"
chardet = "^5.2.0"


[tool.poetry.group.dev.dependencies]
debugpy = "^1.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
import_heading_stdlib = "Standard Libraries"
import_heading_firstparty = "Nemesis Libraries"
import_heading_thirdparty = "3rd Party Libraries"
profile = "black"
extra_standard_library = "asgiref"
known_first_party = "nemesis"
src_paths = ["isort", "test"]
line_length = 90
use_parentheses = true
multi_line_output = 3
include_trailing_comma = true
ensure_newline_before_comments = true
sections = [
    "FUTURE",
    "STDLIB",
    "DJANGO",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

# [tool.pyright]
# Using pyrightconfig.json instead since pyproject.toml has 2nd class
# support in VS code: https://github.com/microsoft/pyright/issues/694#issuecomment-823778235

[tool.black]
line-length = 240