[tool.poetry]
name = "dotnet"
version = "0.1.0"
description = "dotnet decompilation and deserialization scanning"
authors = ["SpecterOps <specterops.io>"]
packages = [{ include = "dotnet" }]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.81.0"
uvicorn = { extras = ["standard"], version = "^0.18.3" }
python-multipart = "^0.0.5"
typing = "^3.7.4.3"
nemesispb = { path = "../../packages/python/nemesispb", develop = true }
nemesiscommon = { path = "../../packages/python/nemesiscommon", develop = true }
pycryptodomex = "^3.15.0"
prometheus-fastapi-instrumentator = "^5.9.1"
prometheus-client = "^0.15.0"
requests = "^2.28.1"
prometheus-async = {extras = ["aiohttp"], version = "^22.2.0"}
aiohttp = "^3.9.3"
pydantic = "^1.10.5"
fastapi-class = "^2.0.0"
aioboto3 = "^10.4.0"
structlog = "^23.1.0"
rich = "^13.3.3"
py = "^1.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.6.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
import_heading_stdlib = "Standard Libraries"
import_heading_firstparty = "Nemesis Libraries"
import_heading_thirdparty = "3rd Party Libraries"
profile = "black"
extra_standard_library = "asgiref"
known_first_party = "nemesis"
src_paths = ["isort", "test"]
line_length = 90
use_parentheses = true
multi_line_output = 3
include_trailing_comma = true
ensure_newline_before_comments = true
sections = [
    "FUTURE",
    "STDLIB",
    "DJANGO",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

# [tool.pyright]
# Using pyrightconfig.json instead since pyproject.toml has 2nd class
# support in VS code: https://github.com/microsoft/pyright/issues/694#issuecomment-823778235

[tool.black]
line-length = 240
