[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["SpecterOps <info@specterops.io>"]
packages = [{ include = "nlp" }]

[tool.poetry.scripts]
app = "nlp.__main__:main"

[tool.poetry.dependencies]
python = "^3.11.2"
typing-extensions = "^4.5.0"
fastapi = "^0.109.2"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
prometheus-async  = { extras = ["aiohttp"], version = "^22.2.0"}
aiohttp = "^3.9.3"
nemesiscommon = { path = "../../packages/python/nemesiscommon", develop = true }
nemesispb = { path = "../../packages/python/nemesispb", develop = true }
elasticsearch = "^8.10.0"
torch = {version = "^2.2.0+cpu", source = "torch"}
sentence-transformers = "^2.3.1"
langchain = "^0.1.2"
langchain-community = "^0.0.14"
certifi = "^2023.7.22"
tiktoken = "^0.6.0"
pydantic-settings = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
flake8 = "^5.0.4"
mypy = "^0.971"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
import_heading_stdlib = "Standard Libraries"
import_heading_firstparty = "Nemesis Libraries"
import_heading_thirdparty = "3rd Party Libraries"
profile = "black"
extra_standard_library = "asgiref"
known_first_party = "nemesis"
src_paths = ["isort", "test"]
line_length = 90
use_parentheses = true
multi_line_output = 3
include_trailing_comma = true
ensure_newline_before_comments = true
sections = [
    "FUTURE",
    "STDLIB",
    "DJANGO",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

[tool.black]
line-length = 240