[tool.poetry]
name = "chromium"
version = "0.1.0"
description = "Modules Nemesis uses to handle Chromium files"
authors = ["SpecterOps"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
impacket = ">=0.12.0,<0.13.0"
psycopg = {extras = ["binary"], version = ">=3.0.0,<4.0.0"}
dapr = ">=1.0.0,<2.0.0"
structlog = ">=20.0.0,<30.0.0"
nemesis-dpapi = { path = "../nemesis_dpapi", develop = true }

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
