[project]
name = "chromium"
version = "0.1.0"
description = "Modules Nemesis uses to handle Chromium files"
authors = [{name = "SpecterOps"}]
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "impacket>=0.13.0,<0.14.0",
    "asyncpg>=0.30.0,<0.31.0",
    "dapr==1.16.0",
    "structlog>=20.0.0,<30.0.0",
    "nemesis_dpapi",
    "file_linking",
    "common",
]

[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chromium"]

[tool.uv.sources]
nemesis_dpapi = { path = "../nemesis_dpapi", editable = true }
file_linking = { path = "../file_linking", editable = true }
common = { path = "../common", editable = true }
