[tool.poetry]
name = "common"
version = "0.1.0"
description = ""
authors = ["SpecterOps"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pydantic = "^2.10.5"
structlog = "^25.1.0"
dapr = "1.16.0"
minio = "^7.2.14"
fastapi = "^0.115.6"
dapr-ext-workflow = "^1.16.0"
psycopg = {extras = ["pool"], version = "^3.2.9"}
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

