[project]
name = "common"
version = "0.1.0"
description = ""
authors = [{name = "SpecterOps"}]
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "pydantic>=2.10.5,<3.0.0",
    "structlog>=25.1.0,<26.0.0",
    "dapr==1.16.0",
    "minio>=7.2.14,<8.0.0",
    "fastapi>=0.121.0,<0.122.0",
    "dapr-ext-workflow>=1.16.0,<2.0.0",
    "psycopg[pool]>=3.2.9,<4.0.0",
    "asyncpg>=0.30.0,<0.31.0",
    "async-lru>=2.0.5,<3.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common"]
