[tool.poetry]
name = "file_enrichment_modules"
version = "0.1.0"
description = "Modules Nemesis uses to enrich files"
authors = ["SpecterOps"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
structlog = "^25.1.0"
impacket = "^0.12.0"
pydantic = "^2.10.5"
dnfile = "^0.15.1"
yara-x = "^1.0.1"
plyara = "^2.2.7"
asyncpg = "^0.30.0"
psycopg = "^3.2.4"
common = { path = "../common", develop = true }
nemesis_dpapi = { path = "../nemesis_dpapi", develop = true }
lnkparse3 = "^1.5.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

