[project]
name = "file_enrichment_modules"
version = "0.1.0"
description = "Modules Nemesis uses to enrich files"
authors = [{name = "SpecterOps"}]
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "structlog>=25.1.0,<26.0.0",
    "impacket>=0.13.0,<0.14.0",
    "pydantic>=2.10.5,<3.0.0",
    "dnfile>=0.15.1,<0.16.0",
    "yara-x>=1.0.1,<2.0.0",
    "plyara>=2.2.7,<3.0.0",
    "asyncpg>=0.30.0,<0.31.0",
    "common",
    "nemesis_dpapi",
    "file_linking",
    "chromium",
    "lnkparse3>=1.5.0,<2.0.0",
    "dapr==1.16.0",
    "pymupdf>=1.26.6,<2.0.0",
    "presidio-analyzer>=2.2.358,<3.0.0",
    "spacy>=3.8.3,<4.0.0",
    "py7zr>=0.22.0,<1.0.0",
    "libscca-python>=20240427",
    "pypykatz>=0.6.11,<0.7.0",
    "pyarrow>=19.0.1,<20.0.0",
    "msoffcrypto-tool>=5.4.2,<6.0.0",
    "oletools>=0.60.2,<0.61.0",
    "regipy>=5.2.0,<6.0.0",
    "pillow>=11.3.0,<12.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pydecipher",
    "lief>=0.16.5",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["file_enrichment_modules"]

[tool.uv]
constraint-dependencies = ["pyasn1>=0.6.2"]

[tool.uv.sources]
common = { path = "../common", editable = true }
nemesis_dpapi = { path = "../nemesis_dpapi", editable = true }
file_linking = { path = "../file_linking", editable = true }
chromium = { path = "../chromium", editable = true }
pydecipher = { git = "https://github.com/HarmJ0y/pydecipher.git" }

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
addopts = "--ignore=tests/integration"
