[tool.poetry]
name = "file_linking"
version = "0.1.0"
description = "Modules Nemesis uses to handle file links and listings"
authors = ["SpecterOps"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
psycopg = {extras = ["binary"], version = ">=3.0.0,<4.0.0"}
dapr = "1.15.0"
structlog = ">=20.0.0,<30.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
