[project]
name = "file_linking"
version = "0.1.0"
description = "Modules Nemesis uses to handle file links and listings"
authors = [{name = "SpecterOps"}]
readme = "README.md"
requires-python = ">=3.12,<3.14"

dependencies = [
    "psycopg[binary]>=3.0.0,<4.0.0",
    "asyncpg>=0.30.0,<0.31.0",
    "dapr==1.16.0",
    "structlog>=20.0.0,<30.0.0",
    "common",
    "pyyaml>=6.0.3,<7.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["file_linking"]

[tool.uv.sources]
common = { path = "../common", editable = true }

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
