[tool.poetry]
name = "nemesis_dpapi"
version = "0.1.0"
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
impacket = ">=0.13.0,<0.14.0"
asyncpg = ">=0.29.0,<=0.30.0"
cryptography = ">=46.0.0,<47.0.0"
pydantic = ">=2.0.0,<3.0.0"
pycryptodome = ">=3.23.0,<4.0.0"
dpapick3 = ">=0.7.1,<0.8.0"
dapr = "1.16.0"
common = { path = "../../libs/common", develop = true }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.10"
pytest = "^8.4.1"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.3.0"
pytest-benchmark = "^5.1.0"

[tool.pytest.ini_options]
markers = [
    "benchmark: performance benchmark tests"
]
# Skip benchmarks by default (use --benchmark-only to run them)
addopts = "--benchmark-skip"
# Test discovery patterns
testpaths = ["tests"]
python_files = ["test_*.py", "bench_*.py"]

asyncio_default_fixture_loop_scope = "function"

