[project]
name = "nemesis_dpapi"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<3.14"

dependencies = [
    "impacket>=0.13.0,<0.14.0",
    "asyncpg>=0.29.0,<=0.30.0",
    "cryptography>=46.0.0,<47.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pycryptodome>=3.23.0,<4.0.0",
    "dpapick3>=0.7.1,<0.8.0",
    "dapr==1.16.0",
    "common",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.3.0",
    "pytest-benchmark>=5.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nemesis_dpapi"]

[tool.uv.sources]
common = { path = "../common", editable = true }

[tool.pytest.ini_options]
markers = [
    "benchmark: performance benchmark tests"
]
# Skip benchmarks by default (use --benchmark-only to run them)
addopts = "--benchmark-skip"
# Test discovery patterns
testpaths = ["tests"]
python_files = ["test_*.py", "bench_*.py"]

asyncio_default_fixture_loop_scope = "function"
