[project]
name = "agents"
version = "0.1.0"
description = "Agents for Nemesis data processing and interaction."
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "fastapi>=0.121.0,<0.122.0",
    "uvicorn>=0.34.0,<0.35.0",
    "dapr==1.16.0",
    "dapr-ext-fastapi==1.16.0",
    "structlog>=25.1.0,<26.0.0",
    "pydantic>=2.10.4,<3.0.0",
    "typing-extensions>=4.12.2,<5.0.0",
    "gql[requests]>=3.5.3,<4.0.0",
    "websockets>=14.2,<15.0",
    "common",
    "pydantic-ai>=0.7.1,<0.8.0",
    "dapr-ext-workflow==1.16.0",
    "logfire>=4.3.3,<5.0.0",
    "colorlog>=6.9.0,<7.0.0",
    "opentelemetry-instrumentation-fastapi>=0.59b0",
    "opentelemetry-api>=1.36.0,<2.0.0",
    "opentelemetry-sdk>=1.36.0,<2.0.0",
    "opentelemetry-instrumentation>=0.59b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.36.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-http>=1.36.0,<2.0.0",
    "opentelemetry-semantic-conventions>=0.59b0",
    "openinference-instrumentation-pydantic-ai>=0.1.4",
    "asyncpg>=0.30.0,<0.31.0",
    "psycopg>=3.2.9,<4.0.0",
    "pythonnet>=3.0.4,<4.0.0",
    "protobuf>=6.33.5,<7.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "watchfiles>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents"]

[tool.uv]
constraint-dependencies = ["pyasn1>=0.6.2"]

[tool.uv.sources]
common = { path = "../../libs/common", editable = true }
