[tool.poetry]
name = "alerting"
version = "0.1.0"
description = "Sends Nemesis alerts to external services."
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
dapr = "^1.15.0"
dapr-ext-fastapi = "^1.15.0"
structlog = "^25.1.0"
pydantic = "^2.10.4"
typing-extensions = "^4.12.2"
# asyncpg = "^0.30.0"
# minio = "^7.2.14"
apprise = "^1.9.2"
common = { path = "../../libs/common", develop = true }
gql = "^3.5.0"
websockets = "^14.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

