[project]
name = "alerting"
version = "0.1.0"
description = "Sends Nemesis alerts to external services."
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "fastapi>=0.121.0,<0.122.0",
    "uvicorn>=0.34.0,<0.35.0",
    "dapr==1.16.0",
    "dapr-ext-fastapi==1.16.0",
    "structlog>=25.1.0,<26.0.0",
    "pydantic>=2.10.4,<3.0.0",
    "typing-extensions>=4.12.2,<5.0.0",
    "apprise>=1.9.2,<2.0.0",
    "common",
    "gql>=3.5.0,<4.0.0",
    "websockets>=14.2,<15.0",
    "requests>=2.32.5,<3.0.0",
    "requests-toolbelt>=1.0.0,<2.0.0",
    "aiohttp>=3.13.3,<4.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "watchfiles>=1.0.0",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alerting"]

[tool.uv.sources]
common = { path = "../../libs/common", editable = true }
