[tool.poetry]
name = "cli"
version = "0.1.0"
description = "Nemesis CLI"
authors = ["SpecterOps"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
aiohttp = "^3.11.11"
structlog = "^25.1.0"
requests = "^2.32.5"
click = "^8.1.8"
tqdm = "^4.67.1"
colorlog = "^6.9.0"
#leveldb-312 = "^1.0.0"
mythic = "^0.2.5"
humanfriendly = "^10.0"
gql = "^3.5.0"
pydantic-settings = "^2.7.1"
dynaconf = "^3.2.7"
docker = "^7.1.0"
asyncpg = "^0.30.0"
pyyaml = "^6.0.2"
common = { path = "../../libs/common", develop = true }
requests-toolbelt = "^1.0.0"
watchdog = "^6.0.0"
dapr = "1.16.0"
plyvel-ci = "^1.5.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
submit = "cli.main:submit"
module_runner = "cli.module_runner:main"
stress_test = "cli.stress_test:main"

