[project]
name = "cli"
version = "0.1.0"
description = "Nemesis CLI"
authors = [{name = "SpecterOps"}]
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "aiohttp>=3.13.3,<4.0.0",
    "structlog>=25.1.0,<26.0.0",
    "requests>=2.32.5,<3.0.0",
    "click>=8.1.8,<9.0.0",
    "tqdm>=4.67.1,<5.0.0",
    "colorlog>=6.9.0,<7.0.0",
    "mythic>=0.2.5,<0.3.0",
    "humanfriendly>=10.0,<11.0",
    "gql>=3.5.0,<4.0.0",
    "pydantic-settings>=2.7.1,<3.0.0",
    "dynaconf>=3.2.7,<4.0.0",
    "docker>=7.1.0,<8.0.0",
    "asyncpg>=0.30.0,<0.31.0",
    "pyyaml>=6.0.2,<7.0.0",
    "common",
    "requests-toolbelt>=1.0.0,<2.0.0",
    "watchdog>=6.0.0,<7.0.0",
    "dapr==1.16.0",
    "plyvel-ci>=1.5.1,<2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pyright>=1.1",
]

[project.scripts]
submit = "cli.main:submit"
module_runner = "cli.module_runner:main"
stress_test = "cli.stress_test:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]

[tool.uv.sources]
common = { path = "../../libs/common", editable = true }
