[tool.poetry]
name = "document_conversion"
version = "0.1.0"
description = "Document conversion service service that runs Tika, calls Gotenberg, and extracts strings"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = "^0.121.0"
uvicorn = "^0.34.0"
dapr = "1.16.0"
dapr-ext-fastapi = "1.16.0"
dapr-ext-workflow = "1.16.0"
structlog = "^25.1.0"
pydantic = "^2.10.4"
typing-extensions = "^4.12.2"
minio = "^7.2.14"
common = { path = "../../libs/common", develop = true }
jpype1 = "^1.5.2"
requests = "^2.32.3"
psycopg = {extras = ["pool"], version = "^3.2.9"}
pypdf = "^6.1.3"
olefile = "^0.47"
msoffcrypto-tool = "^5.4.2"
protobuf = "6.31.1"
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
document_conversion = "document_conversion.main:main"

