[project]
name = "document_conversion"
version = "0.1.0"
description = "Document conversion service service that runs Tika, calls Gotenberg, and extracts strings"
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "fastapi>=0.121.0,<0.122.0",
    "uvicorn>=0.34.0,<0.35.0",
    "dapr==1.16.0",
    "dapr-ext-fastapi==1.16.0",
    "dapr-ext-workflow==1.16.0",
    "structlog>=25.1.0,<26.0.0",
    "pydantic>=2.10.4,<3.0.0",
    "typing-extensions>=4.12.2,<5.0.0",
    "minio>=7.2.14,<8.0.0",
    "common",
    "jpype1>=1.5.2,<2.0.0",
    "requests>=2.32.3,<3.0.0",
    "httpx>=0.28.1,<0.29.0",
    "psycopg[pool]>=3.2.9,<4.0.0",
    "olefile>=0.47,<0.48",
    "msoffcrypto-tool>=5.4.2,<6.0.0",
    "protobuf>=6.33.5,<7.0.0",
    "asyncpg>=0.30.0,<0.31.0",
    "pymupdf>=1.26.6,<2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "watchfiles>=1.0.0",
]

[project.scripts]
document_conversion = "document_conversion.controller:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["document_conversion"]

[tool.uv.sources]
common = { path = "../../libs/common", editable = true }
